syntax = "proto3";

message TransactionSign {
    uint32 version = 1;
    uint32 cursor_num = 2;
    uint32 cursor_label = 3;
    uint64 lifetime = 4;
    string sender = 5;
    string contract = 6;
    string method = 7;
    bytes param = 8;
    uint32 sig_alg = 9;
}