syntax = "proto3";

service Requirement {
	rpc Publish(PublishRequest) returns(PublishResponse) {};
    rpc Query(QueryRequest) returns(QueryResponse) {};
}

message PublishRequest {
    uint32 version = 1;
    uint32 cursor_num = 2;
    uint32 cursor_label = 3;
    uint64 lifetime = 4;
    string sender = 5;
    string contract = 6;
    string method = 7;
    string param = 8;
    uint32 sig_alg = 9;
    string signature =10;
}

//    string username = 1;
//    string requirement_name = 2;
//    string feature_tag = 3;
//    string sample_path = 4;
//    string sample_hash = 5;
//    string expire_time = 6;
//    string price = 7;
//    string description = 8;
//    string publish_date = 9;
//    string signature = 10;

message PublishResponse {
    int32 code = 1;
    string data = 2;
    string msg = 3;
}

message QueryRequest {
    int32 pageSize = 1;
    int32 pageNum = 2;
    string username = 3;
    uint64 feature_tag =4;
}

message QueryResponse {
    int32 code = 1;
    QueryData data = 2;
    string msg = 3;
}

message QueryData {
    uint64 pageNum = 1;
    uint64 rowCount = 2;
    repeated QueryRow row = 3;
}

message QueryRow {
    string requirement_id = 1;
    string username = 2;
    string requirement_name = 3;
    uint64 feature_tag = 4;
    string sample_path = 5;
    string sample_hash = 6;
    uint32 expire_time = 7;
    uint64 price = 8;
    string description = 9;
    uint32 publish_date = 10;
}